# c3zero-doorbell

./: .gitignore  Cargo.toml  README.md  build.rs  partitions.csv  plot.py  samples.csv  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
case/: case_generator.json  case_generator.scad  doorbell_case.3mf
examples/: button.rs  button_closure.rs  cont.rs  loop.rs  mqtt.rs  mqtt_connection.rs  nvs_test.rs  ota_target.rs  sample_continuous.rs  sample_timer.rs  timer_notify.rs  wifi.rs  ws2812_quad.rs
examples/doorbell/: adc.rs  alert.rs  led_task.rs  main.rs  mqtt.rs  mqtt_debug.rs  mqtt_task.rs  pushover.rs  stats.rs
examples/mqtt/: home_page.rs  led_task.rs  main.rs  mqtt.rs  mqtt_task.rs
examples/mqtt2/: config.rs  home_page.rs  led_task.rs  main.rs
examples/ota/: home_page.rs  main.rs  ota.rs
examples/wifi/: main.rs  sse.rs
pcb/doorbell_pcb/: doorbell_pcb.kicad_pcb  doorbell_pcb.kicad_prl  doorbell_pcb.kicad_pro  doorbell_pcb.kicad_sch  doorbell_pcb.kicad_sch-bak  fp-info-cache
src/: adc.rs  alert.rs  button.rs  button_closure.rs  httpd.rs  lib.rs  main.rs  nvs.rs  pushover.rs  rgb.rs  stats.rs  wifi.rs  ws2812.rs  ws2812_quad.rs
src/alert/: mod.rs
src/button/: button_closure.rs  mod.rs
src/httpd/: hello.rs  mod.rs  nvs.rs  reset.rs  style.rs
src/mqtt/: mod.rs
src/nvs/: mod.rs
src/ota/: mod.rs
src/utils/: hash.rs  httpd.rs  mod.rs  nvs.rs  rgb.rs  ws2812_rmt.rs
src/web/: flash_msg.rs  hello.rs  home_page.rs  mod.rs  navbar.rs  reset.rs
src/wifi/: apstore.rs  manager.rs  mod.rs  old.rs  web.rs
src/ws2812/: mod.rs  ws2812_quad.rs  ws2812_single.rs
templates/: adc_page.html  base.html  config_page.html  index.html  mqtt.html  navbar.html  ota_page.html  pushover.html  reset_page.html  sse_test.html  style.css  wifi.html
utils/: capture_doorbell.py  plot.py
(+30 files in other folders)
