[package]
name = "doorbell"
version = "0.1.0"
authors = ["paulc <212168+paulc@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

#[[bin]]
#name = "doorbell"
#harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "z"
lto = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
panic = "unwind"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-idf-sys = "0.36.1"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = { version = "0.45.2", features = ["rmt-legacy"] }
anyhow = "1.0.98"
log = "0.4"
heapless = { version = "0.8.0", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0.140"
askama = "0.12.1"
urlencoding = "2.1.3"
serde_urlencoded = "0.7.1"
embedded-svc = "0.28.1"
enumset = "1.1.6"
esp-ota = "0.2.2"

[build-dependencies]
embuild = "0.33"

